--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ email: contact@quintsys.com
 description: > # this means to ignore newlines until "baseurl:"
   Web & Database applications development. Online and data driven, secure and performant to meet your specifications.
 baseurl: "" # the sub-path of your site, e.g. /blog
-url: 'http://quintsys.com' # the base hostname & protocol for your site
+url: 'https://quintsys.github.io' # the base hostname & protocol for your site
 twitter_username: quintsysinc
 github_username:  quintsys
 
